Specify defaults to booleans in CRAM preservation map (PR #447)
Fixes #120

--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -615,6 +615,8 @@ section\tabularnewline
 \hline
 \end{tabular}
 
+The boolean values are optional, defaulting to true when absent, although it is recommended to explicitly set them.  SM and TD are mandatory.
+
 \subsubsection*{Data series encodings}
 
 Each data series has an encoding. These encoding are stored in a map with byte[2] 
