--- a/VCFv4.4.tex
+++ b/VCFv4.4.tex
@@ -483,7 +483,8 @@ See also Section~\ref{sv-format-keys} for a list of genotype keys reserved for s
       GT		& 1		& String	& Genotype \\
       HQ		& 2		& Integer	& Haplotype quality \\
       LAA		& .		& Integer	& Strictly increasing, 1-based indices into ALT, indicating which alternate alleles are relevant (local) for the current sample \\
-      LAD		& .		& Integer	& Local allele read depth for the reference and each of the local alternate alleles listed in LAA \\
+      LAD		& .		& Integer	& Read depth for the reference and each of the local alternate alleles listed in LAA \\
+      LGT		& .		& String 	& Genotype against the local alleles \\
       LPL		& .		& Integer	& Phred-scaled genotype likelihoods rounded to the closest integer for genotypes that involve the reference and the local alternative alleles listed in LAA \\
       MQ		& 1		& Integer	& RMS mapping quality \\
       PL		& G		& Integer	& Phred-scaled genotype likelihoods rounded to the closest integer \\
@@ -587,11 +588,23 @@ See also Section~\ref{sv-format-keys} for a list of genotype keys reserved for s
   Similarly, in rare sites, which can be the bulk of the sites, the vast majority of the samples are reference.
   To prevent this, one can choose to specify the allele depth and the genotype likelihood against a subset of ``Local Alleles''.
   LAA is the strictly increasing, 1-based index into ALT, pointing out the alternative alleles that are actually in-play for that sample.
-  For example, if REF is G, ALT is A,C,T,\verb!<*>! and a genotype only has information about G, C, and \verb!<*>!, one can have LAA=[2,4] and thus LPL will be interpreted as pertaining to the alleles [G, C, \verb!<*>!] and not contain likelihood values for genotypes that involve A or T.
+  LAD is the depth of the local alleles, LPL is subset of the PL array that pertains to the alleles that are REF or referred to by LAA, LGT is the genotype but referencing the local alleles rather than the global ones.
   It is implicit that REF is part of any ``local'' context, and it always has index 0, even if the genotype is compound HET.
+  For example, if REF is G, ALT is A,C,T,\verb!<*>! and a genotype only has information about G, C, and \verb!<*>!, one can have LAA=[2,4] and thus LPL will be interpreted as pertaining to the alleles [G, C, \verb!<*>!] and not contain likelihood values for genotypes that involve A or T.
+  In this case LGT=0/1 means that the sample is G/C.
+  GQ is still the genotype quality, even when the genotype is given against the local alleles.
   Note that reordering might be required and care need to be taken to reorder LAD and LPL appropriately.
-  LAA is required in order to interpret LAD and LPL.
+  LAA is required in order to interpret LAD, LPL, and LGT.
+
+  For example, these two lines are encoding the same information (some columns removed for clarity):
+
+  \begin{tabular}[l]{lllll}
+REF&  ALT&FORMAT&Alice&Bob\\
+G&A,C,T,\textless*\textgreater& LAA:LGT:LAD:LPL&  2,4:1/1:20,30,10:90,80,0,100,110,120 &3:0/1:15,25:40,0,80\\
+G&A,C,T,\textless*\textgreater& GT:AD:PL&  2/2:20,.,30,.,10:90,.,.,80,.,0,.,.,.,.,100,.,110,.,120&0/3:15,.,.,25,.:40,.,.,.,.,.,0,.,.,80,.,.,.,.\\
+\end{tabular}
   \item LAD: See LAA
+  \item LGT: See LAA
   \item LPL: See LAA
   \item MQ (Integer): RMS mapping quality, similar to the version in the INFO field.
   \item PL (Integer): The phred-scaled genotype likelihoods rounded to the closest integer, and otherwise defined in the same way as the GL field.
