Added BGI and OTHER as legal values for the PL tag in the @RG SAM header line.

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -312,8 +312,9 @@ The {\tt TP} field is often omitted, which implies linear.}\\\cline{2-3}
   & {\tt LB} & Library.\\\cline{2-3}
   & {\tt PG} & Programs used for processing the read group.\\\cline{2-3}
   & {\tt PI} & Predicted median insert size.\\\cline{2-3}
-  & {\tt PL} & Platform/technology used to produce the reads. \emph{Valid values}:
-  {\tt CAPILLARY}, {\tt LS454}, {\tt ILLUMINA}, {\tt SOLID}, {\tt HELICOS}, {\tt IONTORRENT}, {\tt ONT}, and {\tt PACBIO}.\\\cline{2-3}
+  & {\tt PL} & Platform/technology used to produce the reads. \emph{Valid values}: 
+  {\tt BGI}, {\tt CAPILLARY}, {\tt LS454}, {\tt ILLUMINA}, {\tt SOLID}, {\tt HELICOS}, {\tt IONTORRENT}, {\tt ONT}, {\tt PACBIO}, and {\tt OTHER}. 
+  Nacent technologies that have not yet been added to the spec should use {\tt OTHER}. \\\cline{2-3}
   & {\tt PM} & Platform model. Free-form text providing further details of the
   platform/technology used.\\\cline{2-3}
   & {\tt PU} & Platform unit (e.g., flowcell-barcode.lane for Illumina or slide for SOLiD). Unique identifier.\\\cline{2-3}
