Fix minor capitalization issue.

--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -890,7 +890,7 @@ encodings are presented only for demonstration purposes, the main point here is
 to distinguish between bit encodings whose output is always stored in a core data 
 block, and external encodings which store bytes in external data blocks.
 
-\section{\textbf{End of file Container}}
+\section{\textbf{End of file container}}
 
 A special container is used to mark the end of a file or stream. It is required in version 3 or later. The idea is to provide an easy and a quick way to detect that a CRAM file or stream is complete. The marker is basically an empty container with ref seq id set to -1 (unaligned) and alignment 
 start set to 4542278.
