--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -488,7 +488,7 @@ It is recommended to reserve 50\% more space in the CRAM header container than
 is required for the SAM header text by optionally padding the container with a second
 raw block consisting of all zeroes. This can be used to subsequently expand the header
 container in place, such as when updating @SQ records, while preserving the absolute
-offsets of all subsquent containers.
+offsets of all subsequent containers.
 
 \section{\textbf{Block structure}}
 
